# MasterThesisCode

./: .gitignore  CMakeLists.txt  refresh.sh
include/AIToolbox/MDP/Algorithms/: QLearning.hpp
include/MasterThesis/: IO.hpp  RTBSSb.hpp  Signals.hpp  Trajectory.hpp  Utils.hpp  makeExperimentPOMCP.hpp  makeExperimentRTBSS.hpp  makeMultiExperimentPOMCP.hpp  rPOMCP.hpp  rPOMCPSubmod.hpp
include/MasterThesis/Algorithms/: RTBSSb.hpp  rPOMCP.hpp  rPOMCPSubmod.hpp
include/MasterThesis/Algorithms/Utils/: TreeNodes.hpp
include/MasterThesis/CameraBasic/: cameraBasicProblem.hpp
include/MasterThesis/CameraPath/: cameraPathProblem.hpp
include/MasterThesis/FiniteBudget/: finiteBudgetProblem.hpp  finiteBudgetProblemIR.hpp
include/MasterThesis/Myopic/: myopicProblem.hpp  myopicProblemIR.hpp
src/: CMakeLists.txt
src/Algorithm/: TreeNodes.cpp
src/CameraBasic/: cameraBasicProblem.cpp  main.cpp
src/CameraPath/: cameraPathProblem.cpp  main.cpp
src/FiniteBudget/: finiteBudgetProblem.cpp  finiteBudgetProblemIR.cpp  main.cpp  maintest.cpp
src/Myopic/: main.cpp  myopicProblem.cpp  myopicProblemIR.cpp
